# Stock-Scraper

./: .gitignore  Asset.h  CMakeLists.txt  ConnectHttp.h  ConnectHttp2.h  Date.h  Email.cpp  Email.h  File.h  Macros.h  README.md  Strategy.cpp  Strategy.h  TradeHistory.h  TradingData.h  Utils.h  main  main.cpp  makefile  mcpt.cpp  reference_code.cpp  statn.cpp  test.cpp  test.json  threshold_test.cpp  trade.cpp
Data/_help/: lastdate.d24
include/rapidjson/: ._memorystream.h
main.dSYM/Contents/Resources/DWARF/: main
options/OptionsPricing-master/codes and output/: output
quant/: Random.cpp  Random.h  a.out  maineq1.cpp  maineq2.cpp  outfile
tickers/: s_p_500.h
